# TSS_Proiect

./: .coveragerc  .gitignore  PLAN_FINALIZARE_PROIECT.md  PREZENTARE_TSS.md  RAPORT_TSS.md  README.md  TSS_T1_FitnessClassBooking.pptx  Testarea sistemelor software – Testare unitară în Python.pptx  cause_effect_graph.drawio  causeeffect.drawio  cfg_diagrama.drawio  create_presentation.py  fitness_class_booking.py  pyproject.toml  pytest.ini  raport_ai.docx  raport_ai.txt  requirements.txt  run_coverage.sh  setup.cfg  test_boundary_value_analysis.py  test_coverage.py  test_equivalence_partitioning.py  test_independent_circuits.py  test_mutation.py  video.txt
copy_project/: .gitignore  COSMIC_RAY_NOTES.md  README.md  TSS_T1_FitnessClassBooking.pptx  cosmic-ray.toml  raport_ai.docx  test_coverage.py
cosmic_ray/: COSMIC_RAY_NOTES.md  cosmic-ray-report.txt  cosmic-ray-survivors.txt  cosmic-ray.toml
docs/: README.md  presentation_outline.md
logs/: README.md  coverage_report.txt  mutmut_results.txt  pytest_output.txt
screenshots/: README.md
scripts/: generate_reports.sh  run_coverage.sh  run_mutation.sh  run_tests.sh
src/: bank_account.py
teste_ai/: __init__.py  fitness_class_booking.py  test_ai_boundary_and_structural.py  test_ai_boundary_value_analysis.py  test_ai_coverage.py  test_ai_equivalence_and_validation.py  test_ai_equivalence_partitioning.py  test_ai_generated_booking.py  test_ai_independent_circuits.py  test_ai_mutation.py  test_ai_paths_and_mutation_focus.py
tests/: conftest.py  test_bank_account.py  test_bank_account_additional_mutation.py
(+33 files in other folders)
